# satnogs-network

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.swp  .pylintrc  .pylintrc3  .readthedocs.yml  .yapfignore  Dockerfile  README.md  docker-compose.cache.yml  docker-compose.yml  env-dist  gulpfile.js  manage.py  package-lock.json  package.json  requirements-dev.txt  requirements.txt  satnogs.sh  setup.cfg  tox.ini
auth0login/: apps.py  auth0backend.py  urls.py  views.py
contrib/: postprocess-openapi-schema.py  refresh-requirements.sh
docker/: dev
docs/: conf.py  contribute.rst  developer-guide.rst  index.rst  installation-docker.rst  installation-virtualenv.rst  maintenance.rst  requirements.txt
network/: __init__.py  _version.py  celery.py  settings.py  urls.py  wsgi.py
network/api/: filters.py  perms.py  serializers.py  tests.py  urls.py  views.py
network/base/: admin.py  context_processors.py  db_api.py  decorators.py  forms.py  helpers.py  models.py  perms.py  rating.py  rating_task.py  scheduling.py  signals.py  stats.py  tasks.py  test_utils.py  tests.py  urls.py  utils.py  validators.py  views.py
network/base/management/commands/: fetch_data.py  fetch_tle.py  initialize.py  update_all_tle.py  (+1 more)
network/base/migrations/: 0001_initial.py  0003_auto_20160119_1856.py  0006_auto_20160325_0126.py  0014_auto_20170205_0059.py  0022_auto_20170909_2103.py  0045_auto_20180822_1947.py  0049_auto_20180915_1503.py  0055_add_new_antenna_type.py  0061_create_indexes.py
network/base/templatetags/: paginator.py  tags.py  url_replace.py
network/base/views/: generic.py  observation.py  scheduling.py  station.py
network/static/html/: 502.html  503.html  504.html
network/static/js/: map.js  observation_new.js  observation_view.js  observations.js  polar_svg.js  satellite.js  station_edit.js  station_view.js  stations.js
network/templates/: base.html
network/templates/base/: about.html  home.html  observation_new.html  observation_view.html  observations.html  station_edit.html  station_view.html  stations.html
network/templates/includes/: satellite.html
network/templates/users/: user_detail.html
network/users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
requirements/: dev.txt  production.txt
satnogs-network-api-client/: .gitignore  openapi-generator-config.json  setup.cfg  tox.ini
satnogs-network-api-client/satnogsnetworkapiclient/: _version.py
(+7 files in other folders)
