[metadata]
name = satnogs-network
url = https://gitlab.com/librespacefoundation/satnogs/satnogs-network
author = SatNOGS project
author_email = dev@satnogs.org
license = AGPLv3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Telecommunications Industry
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Topic :: Communications :: Ham Radio
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
description = SatNOGS Network

[options]
packages = find:
include_package_data = True
install_requires =
    # Basic
    Django~=1.11.0
    django-shortuuidfield~=0.1.0
    django-jsonfield~=1.0.0
    celery~=4.1.0
    internetarchive~=1.7.0
    # Deployment
    mysqlclient~=1.3.0
    gunicorn~=19.7.0
    # Cache
    redis~=2.10.0
    django-redis-cache~=1.7.0
    # Configuration
    unicode-slugify~=0.1.0
    django-autoslug~=1.9.0
    python-decouple~=3.1.0
    dj-database-url~=0.5.0
    pytz
    Unipath~=1.0
    python-dotenv~=0.6.0
    # Logging
    raven~=6.9.0
    sentry-sdk~=0.6.0
    # Security
    django-braces~=1.12.0
    django-secure~=1.0.1
    django_csp~=3.4.0
    # Users
    django-allauth~=0.35.0
    django-avatar~=4.1.0
    django-crispy-forms~=1.7.0
    social-auth-app-django~=1.2.0
    # Static
    django_compressor~=2.2.0
    Pillow~=5.0.0
    # API
    djangorestframework~=3.7.0
    Markdown~=2.6.0
    django-filter~=1.1.0
    # Astronomy
    orbit@git+https://gitlab.com/librespacefoundation/orbit.git@db463c2d261365485c157f2c86233aaf44e577a2

[flake8]
max-complexity = 25
max-line-length = 99
ignore = F403,W504
exclude = network/_version.py,versioneer.py,*/migrations,docs

[tool:pytest]
addopts = -v --cov --cov-report=term-missing
python_files = tests.py
DJANGO_SETTINGS_MODULE = network.settings

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = network/_version.py
versionfile_build = network/_version.py
tag_prefix =
parentdir_prefix =
